Open Mason & Stonebreak: Turned both programs into modules that can access each other's files. Depreciated old Open Mason model loading system in favour of direct model loading using stonebreak resources.